tests/data/ap-waf/dataguard-alarm-uds.yaml
apiVersion: appprotect.f5.com/v1
kind: APPolicy
metadata: 
  name: dataguard-alarm-uds
spec:
  policy:
    signature-requirements:
    - tag: Ingress
    signature-sets: 
    - name: kic_sigs
      block: true
      signatureSet: 
        filter: 
          tagValue: Ingress
          tagFilter: eq
    applicationLanguage: utf-8
    blocking-settings:
      violations:
      - alarm: true
        block: false
        name: VIOL_DATA_GUARD
    data-guard:
      creditCardNumbers: true
      enabled: true
      enforcementMode: ignore-urls-in-list
      enforcementUrls: []
      lastCcnDigitsToExpose: 4
      lastSsnDigitsToExpose: 4
      maskData: true
      usSocialSecurityNumbers: true
    enforcementMode: blocking 
    name: dataguard-alarm
    template: 
      name: POLICY_TEMPLATE_NGINX_BASE
