tests/data/ap-waf/syslog-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syslog-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syslog-1
  template:
    metadata:
      labels:
        app: syslog-1
    spec:
      containers:
        - name: syslog
          image: balabit/syslog-ng:3.38.1
          ports:
            - containerPort: 514
            - containerPort: 601
          volumeMounts:
          - name: config-volume
            mountPath: /etc/syslog-ng/syslog-ng.conf
            subPath: syslog-ng.conf
      volumes:
        - name: config-volume
          configMap:
            name: syslog-config
---
apiVersion: v1
kind: Service
metadata:
  name: syslog-svc-1
spec:
  ports:
    - port: 514
      targetPort: 514
      protocol: TCP
  selector:
    app: syslog-1
