tests/data/ap-waf/syslog2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syslog2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syslog2
  template:
    metadata:
      labels:
        app: syslog2
    spec:
      containers:
        - name: syslog2
          image: balabit/syslog-ng:4.12.0
          ports:
            - containerPort: 514
            - containerPort: 601
          volumeMounts:
          - name: config-volume
            mountPath: /etc/syslog-ng/syslog-ng.conf
            subPath: syslog-ng.conf
      volumes:
        - name: config-volume
          configMap:
            name: syslog-config
---
apiVersion: v1
kind: Service
metadata:
  name: syslog2-svc
spec:
  ports:
    - port: 514
      targetPort: 514
      protocol: TCP
  selector:
    app: syslog2
