tests/data/ap-waf/waf.yaml
apiVersion: k8s.nginx.org/v1
kind: Policy
metadata:
  name: waf-policy
spec:
  waf:
    enable: true
    # apPolicy: "default/dataguard-alarm"
    # securityLog:
    #   enable: true
    #   apLogConf: "default/logconf"
    #   logDest: "syslog:server=127.0.0.1:514"
